test/bad/sample53.dave
// Failed function definition
int hello(int a, int c, double b) {
    print "Hello World!";
	return "string";
}
int main() {
    hello(1,2, "hi");
    hello();
}